Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
http://issues.apache.org/cayenne/

----------------------------------
Release: 3.2M1
Date: 
----------------------------------
Changes/New Features:

CAY-1717 [PATCH] Implement JDBC compatibility layer methods
CAY-1718 Remove everything deprecated in 3.1
CAY-1724 Add 'Property' class for easier and better Expression creation
CAY-1646 Synchronize tabs in Modeler between ObjEntity and DbEntity editor panes

Bug Fixes:

CAY-1721 Writing blobs fails (Oracle)
CAY-1725 NullPointerException from call to removeToManyTarget
CAY-1719 Modeler - Obj Attribute Java Type editor won't focus sometimes
CAY-1677 Modeler: text fields discard input unless you press enter