@@ -1,0 +1,84 @@
+/*****************************************************************
+ *   Licensed to the Apache Software Foundation (ASF) under one
+ *  or more contributor license agreements.  See the NOTICE file
+ *  distributed with this work for additional information
+ *  regarding copyright ownership.  The ASF licenses this file
+ *  to you under the Apache License, Version 2.0 (the
+ *  "License"); you may not use this file except in compliance
+ *  with the License.  You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *  Unless required by applicable law or agreed to in writing,
+ *  software distributed under the License is distributed on an
+ *  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ *  KIND, either express or implied.  See the License for the
+ *  specific language governing permissions and limitations
+ *  under the License.
+ ****************************************************************/
+
+package org.apache.cayenne.modeler.action;
+
+import java.awt.event.ActionEvent;
+import java.util.Iterator;
+
+import javax.swing.tree.DefaultMutableTreeNode;
+import javax.swing.tree.TreePath;
+
+import org.apache.cayenne.configuration.ConfigurationNode;
+import org.apache.cayenne.configuration.DataChannelDescriptor;
+import org.apache.cayenne.map.DbEntity;
+import org.apache.cayenne.map.Entity;
+import org.apache.cayenne.map.ObjEntity;
+import org.apache.cayenne.modeler.Application;
+import org.apache.cayenne.modeler.CayenneModelerFrame;
+import org.apache.cayenne.modeler.ProjectController;
+import org.apache.cayenne.modeler.ProjectTreeModel;
+import org.apache.cayenne.modeler.editor.EditorView;
+import org.apache.cayenne.modeler.event.EntityDisplayEvent;
+import org.apache.cayenne.modeler.util.CayenneAction;
+
+public class ObjEntityCounterpartAction extends CayenneAction {
+
+    public static String getActionName() {
+        return "View related DbEntity";
+    }
+
+    public ObjEntityCounterpartAction(Application application) {
+        super(getActionName(), application);
+    }
+
+    public String getIconName() {
+        return "icon-move_down.gif";
+    }
+
+    /**
+     * @see org.apache.cayenne.modeler.util.CayenneAction#performAction(ActionEvent)
+     */
+    public void performAction(ActionEvent e) {
+        viewCounterpartEntity();
+    }
+
+    protected void viewCounterpartEntity() {
+        ProjectController mediator = getProjectController();
+
+        ObjEntity objEntity = mediator.getCurrentObjEntity();
+
+        if (objEntity == null) {
+            return;
+        }
+        
+        DbEntity entity = objEntity.getDbEntity();
+        
+        TreePath path = DbEntityCounterpartAction.buildTreePath(entity);
+        DbEntityCounterpartAction.editor().getProjectTreeView().getSelectionModel().setSelectionPath(path);
+        
+        EntityDisplayEvent event = new EntityDisplayEvent(
+                DbEntityCounterpartAction.editor().getProjectTreeView(),
+                entity,
+                entity.getDataMap(),
+                (DataChannelDescriptor) getProjectController().getProject().getRootNode());
+        getProjectController().fireDbEntityDisplayEvent(event);
+    }
+    
+}
